--- a/css/main.css
+++ b/css/main.css
@@ -357,6 +357,7 @@ html, body {
         color: white;
         width: 100%;
         margin-bottom: 12px;
+      text-shadow: #1a1f24 0px 0px 15px;
       }
 
       .about-me:after {
@@ -402,6 +403,7 @@ html, body {
         color: white;
         height: 25vw;
         width: 100%;
+      text-shadow: #1a1f24 0px 0px 15px;
       }
 
       .fun-fact-desc {
@@ -499,7 +501,7 @@ html, body {
     border-radius: 8px;
     border-image-slice: 1;
     padding: 1px;
-    width: 19vw;
+    width: 20vw;
     height: 14vw;
     box-shadow: 0 0 15px 1px #2f81f7;
     opacity: 0;
@@ -517,6 +519,7 @@ html, body {
   }
   
   /*** Projects ***/
+
   
   @-webkit-keyframes fade-in-bottom {
     0% {
@@ -535,7 +538,12 @@ html, body {
     }
   }
 
-  
+  .projects-laptop {
+    width: 0px;
+    height: 0px;
+    visibility: hidden;
+    opacity: 0;
+  }
   
   .blurred-in-bottom {
     -webkit-animation: fade-in-bottom 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000)  both;
@@ -556,7 +564,7 @@ html, body {
   }
 
   .project-link1 {
-    margin-bottom: auto;
+    margin-bottom: 0.3rem;
   }
   
   .project-h2 h2 {
@@ -569,6 +577,7 @@ html, body {
       width: 100%;
       margin: 0;
       padding: 80px 0 80px 0;
+      text-shadow: #1a1f24 0px 0px 15px;
   }
   
   .project-h2 h2::after {
@@ -642,7 +651,7 @@ html, body {
     color: white;
     font-size: 3vw;
     font-weight: 500;
-    margin: 1vw 0 3vw 0;
+    margin: 3vw 0 3vw 0;
   }
   
   .unplugged-text a {
@@ -674,6 +683,7 @@ html, body {
     transform: scaleY(12);
     z-index: -1;
   }
+
 
   .project-link1 a {
     position: relative;
@@ -825,7 +835,7 @@ html, body {
     color: white;
     font-size: 3vw;
     font-weight: 500;
-    margin: 1vw 0 5vw 0;
+    margin: 3vw 0 5vw 0;
     height: 16vw;
   }
   
@@ -1014,6 +1024,7 @@ html, body {
     align-items: center;
     flex-direction: column;
     margin-bottom: 0;
+    text-shadow: #1a1f24 0px 0px 15px;
   }
   
   .contact-header h2:after {
@@ -1040,7 +1051,7 @@ html, body {
   
   form {
     position: relative;
-    height: 100vmin;
+    height: 70vmin;
     display: flex;
     justify-content: center;
   }
@@ -1147,8 +1158,8 @@ html, body {
       margin-top: 2vw;
     }
 
-    .sticky-note-text .project-link1 {
-      margin-bottom: 2vw;
+    .project-link1 {
+      margin-bottom: 0.7rem;
     }
 
     .contact-form button {
@@ -1316,17 +1327,17 @@ html, body {
       }
 
       .skill-list {
-        width: 7rem;
-        height: 5rem;
+        width: 6.5rem;
+        height: 4.5rem;
       }
 
 
       .skill-list img {
-        width: 2.2rem;
+        width: 2rem;
       }
 
       .skill-list h3 {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
       }
 
       .skill-row1,
@@ -1365,7 +1376,15 @@ html, body {
 
       .projects-lists .img-background {
         width: 60%;
-        height: 55vw;
+        height: 50vw;
+      }
+
+      .unplugged-text,
+      .recipe-app-text,
+      .sticky-note-text,
+      .rogue-pickings-text,
+      .guess-the-word-text {
+        top: -43vw;
       }
 
 
@@ -1415,7 +1434,7 @@ html, body {
       .sticky-note .project-link1 a::after,
       .rogue-pickings .project-link1 a::after,
       .guess-the-word .project-link1 a::after {
-        width: 100%;
+        width: 97%;
       }
 
       .unplugged .project-link2 a::after,
@@ -1423,7 +1442,7 @@ html, body {
       .sticky-note .project-link2 a::after,
       .rogue-pickings .project-link2 a::after,
       .guess-the-word .project-link2 a::after {
-        width: 100%;
+        width: 97%;
       }
 
       /** Contact **/
@@ -1492,7 +1511,7 @@ html, body {
 
   .projects-lists .img-background {
     width: 65%;
-    height: 55vw;
+    height: 50vw;
   }
 
   .unplugged,
@@ -1500,7 +1519,7 @@ html, body {
   .sticky-note,
   .rogue-pickings,
   .guess-the-word {
-    height: 70vw;
+    height: 65vw;
   }
 
 
@@ -1528,7 +1547,7 @@ html, body {
   .sticky-note-text,
   .rogue-pickings-text,
   .guess-the-word-text {
-    width: 75%;
+    width: 100%;
   }
 
 
@@ -1544,7 +1563,6 @@ html, body {
   .guess-the-word-text .text-container {
     position: relative;
     bottom: 1vw;
-    right: -25vw;
     height: 30vw;
     width: 48.5%;
     }
@@ -1562,9 +1580,6 @@ html, body {
 
 @media screen and (min-width: 650px) {
 
-  .value {
-    padding: 6px 2px;
-  }
 
   .fun-fact {
     height: 100px;
@@ -1648,10 +1663,10 @@ html, body {
   }
 
   .social-icons {
-    width: 60%;
+    width: 17%;
     bottom: 9vw;
     position: relative;
-    right: -10vw;
+    right: -32vw;
     margin-left: 0;
   }
 
@@ -1668,7 +1683,7 @@ html, body {
   }
 
   #particles-js {
-    height:650vmax;
+    height:610vmax;
   }
 
   .about-desc,
@@ -1684,14 +1699,14 @@ html, body {
   .sticky-note-text .text-container,
   .guess-the-word-text .text-container {
     height: 25vw;
-    width: 44%;
+    width: 34%;
     bottom: -2vw;
   }
 
   .recipe-app-text .text-container,
   .rogue-pickings-text .text-container {
     height: 25vw;
-    width: 49%;
+    width: 38%;
     bottom: -2vw;
   }
 
@@ -1715,6 +1730,321 @@ html, body {
   .project-link2 a {
     font-size: 1.8vw;
   }
+}
+
+@media screen and (min-width: 800px) {
+  header h2 {
+    font-size: 6vw;
+  }
+
+  header h3 {
+    font-size: 2vw;
+  }
+
+  .button-wrapper a {
+    font-size: 1.8vw;
+  }
+
+  .button-wrapper {
+    width: 20vw;
+    height: 4vw;
+  }
+
+  .about .content-wrapper {
+    height: 28rem;
+  }
+
+  .social-icons a svg {
+    width: 3.5vw;
+  }
+
+  .social-icons a img {
+    width: 5vw;
+  }
+
+  .skill-list img {
+    width: 1.9rem;
+  }
+
+  .skill-list h3 {
+    font-size: 0.8rem;
+  }
+
+  .skill-list {
+    width: 6.5rem;
+    height: 4.5rem;
+  }
+
+
+  .project-h2 h2 {
+    padding-top: 10vw;
+  }
+
+
+  .img-background,
+  .unplugged-img-container,
+   .unplugged .img-background,
+   .projects-lists {
+    opacity: 0;
+    background-image: none;
+    width: 0px;
+    height: 0px;
+  }
+
+  .projects-laptop {
+    visibility: visible;
+    opacity: 1;
+    width: 100%;
+    height: 600px;
+  }
+
+  .projects-laptop .content-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .project-text {
+    width: 13%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .project-text img {
+    width: 91%;
+    height: 80%;
+    opacity: 1;
+    visibility: visible;
+    position: relative;
+    border: 2px double white;
+    transition: all ease-in-out 0.5s;
+    object-fit: cover;
+    z-index: 3;
+  }
+
+  .projects-laptop .text-container1 {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: 2;
+    height: 13rem;
+    top: 147.7rem;
+    width: 20.8rem;
+    color: white;
+    background-color: #181818a6;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    left: 23rem;
+  }
+  .projects-laptop .text-container2 {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: 2;
+    height: 13rem;
+    top: 147.7rem;
+    width: 20.8rem;
+    color: white;
+    background-color: #181818a6;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    left: 29.5rem;
+  }
+  .projects-laptop .text-container3 {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: 2;
+    height: 13rem;
+    top: 147.7rem;
+    width: 20.8rem;
+    color: white;
+    background-color: #181818a6;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    left: 36rem;
+  }
+  .projects-laptop .text-container4 {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: 2;
+    height: 13rem;
+    top: 147.7rem;
+    width: 20.8rem;
+    color: white;
+    background-color: #181818a6;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    left: -2.2rem;
+  }
+  .projects-laptop .text-container5 {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    z-index: 2;
+    height: 13rem;
+    top: 147.7rem;
+    width: 20.8rem;
+    color: white;
+    background-color: #181818a6;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    left: 4.2rem;
+  }
+
+  .text-container1 h3,
+  .text-container2 h3,
+  .text-container3 h3,
+  .text-container4 h3,
+  .text-container5 h3 {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+
+  .text-container1 h4,
+  .text-container2 h4,
+  .text-container3 h4,
+  .text-container4 h4,
+  .text-container5 h4 {
+    font-size: 0.76rem;
+  }
+
+  .text-container2 .recipe-h4,
+  .text-container3 .sticky-h4 {
+    margin-bottom: 0;
+  }
+
+  .text-container1 .project-link1 a,
+  .text-container1 .project-link2 a,
+  .text-container2 .project-link1 a,
+  .text-container2 .project-link2 a,
+  .text-container3 .project-link1 a,
+  .text-container3 .project-link2 a,
+  .text-container4 .project-link1 a,
+  .text-container4 .project-link2 a,
+  .text-container5 .project-link1 a,
+  .text-container5 .project-link2 a {
+    text-decoration: none;
+    color: white;
+    font-size: 0.77rem;
+    letter-spacing: 4px;
+    font-weight: 600;
+  }
+
+  .text-container1 .project-link1,
+  .text-container1 .project-link2,
+  .text-container2 .project-link1,
+  .text-container2 .project-link2,
+  .text-container3 .project-link1,
+  .text-container3 .project-link2,
+  .text-container4 .project-link1,
+  .text-container4 .project-link2,
+  .text-container5 .project-link1,
+  .text-container5 .project-link2 {
+    margin-left: 1rem;
+  }
+
+  .text-container1 .project-link1 a::after,
+  .text-container2 .project-link1 a::after,
+  .text-container3 .project-link1 a::after,
+  .text-container4 .project-link1 a::after,
+  .text-container5 .project-link1 a::after {
+    content: "";
+    width: 6rem;
+    height: 0.11rem;
+    background-color: #2f81f7;
+    position: relative;
+    left: -0.5rem;
+  }
+
+  .text-container1 .project-link2 a::after,
+  .text-container2 .project-link2 a::after,
+  .text-container3 .project-link2 a::after,
+  .text-container4 .project-link2 a::after,
+  .text-container5 .project-link2 a::after {
+    content: "";
+    width: 8rem;
+    height: 0.11rem;
+    background-color: #2f81f7;
+    position: relative;
+    left: -0.5rem;
+  }
+
+  .text-container1 .project-link1 a:hover::after,
+  .text-container1 .project-link2 a:hover::after,
+  .text-container2 .project-link1 a:hover::after,
+  .text-container2 .project-link2 a:hover::after,
+  .text-container3 .project-link1 a:hover::after,
+  .text-container3 .project-link2 a:hover::after,
+  .text-container4 .project-link1 a:hover::after,
+  .text-container4 .project-link2 a:hover::after,
+  .text-container5 .project-link1 a:hover::after,
+  .text-container5 .project-link2 a:hover::after {
+    transform: scaleY(14);
+    transform-origin: bottom;
+  }
+
+  .project-text img:hover {
+    width: 99%;
+    height: 44%;
+    transform: translateY(-40%);
+  }
+
+  .project-text:hover img {
+    width: 99%;
+    height: 44%;
+    transform: translateY(-40%);
+  }
+
+  .project-text:hover {
+    width: 45%
+  }
+
+  .project-text:hover .text-container1,
+  .project-text:hover .text-container2,
+  .project-text:hover .text-container3 {
+    visibility: visible;
+    opacity: 1;
+    transition: all 0.55s ease-in-out;
+    animation: animate-slide 0.65s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  }
+
+  .project-text:hover .text-container4,
+  .project-text:hover .text-container5 {
+    visibility: visible;
+    opacity: 1;
+    transition: all 0.55s ease-in-out;
+    animation: animate-slide2 0.65s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  }
+
+  @keyframes animate-slide {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-98%);
+    }
+  }
+
+  @keyframes animate-slide2 {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(98%);
+    }
+  }
+
+  #particles-js {
+    height: 403vmax;
+  }
+
 }
   
   
